--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
     }
 
     function tekenPijl() {
-      // vaste pijl rechts van het rad (3 uur)
-      const tipX = rad.width - 10;
-      const tipY = R;
-      const baseX = rad.width - 44;
-      const halfH = 18;
+      // pijl rechts van het rad, horizontaal gespiegeld, wijst naar links
+      const tipX = rad.width - 8;      // punt van de pijl, bijna tegen de rand
+      const tipY = R;                  // midden in de hoogte
+      const baseX = rad.width - 42;    // basis dichter bij het rad
+      const halfH = 18;                // halve hoogte van de basis
 
       rctx.beginPath();
-      rctx.moveTo(baseX, tipY - halfH);
-      rctx.lineTo(baseX, tipY + halfH);
-      rctx.lineTo(tipX,  tipY);
+      rctx.moveTo(tipX, tipY);                 // punt
+      rctx.lineTo(baseX, tipY - halfH);        // bovenbasis
+      rctx.lineTo(baseX, tipY + halfH);        // onderbasis
       rctx.closePath();
       rctx.fillStyle = "#222";
       rctx.fill();
@@ -120,143 +120,8 @@
       rctx.translate(-R, -R);
       tekenSchijven();
       rctx.restore();
-      tekenPijl();
+      tekenPijl();   // pijl tekent na het roteren, blijft vast op drie uur
     }
 
     function draai() {
       if (bezig) return;
-      bezig = true;
-      const doel = Math.random() * 360 + 1080;
-      const duur = 3000;
-      let start = null;
-
-      function anim(t) {
-        if (!start) start = t;
-        const p = Math.min((t - start) / duur, 1);
-        const ease = 1 - Math.pow(1 - p, 3);
-        hoek = doel * ease;
-
-        renderRad();
-
-        if (p < 1) requestAnimationFrame(anim);
-        else {
-          bezig = false;
-          const idx = bepaalIndex(hoek);
-          gekozenKleur = opties[idx];
-          document.getElementById("resultaat").textContent =
-            "Het monster wordt: " + gekozenKleur + ".";
-          kleurMonsterAutomatisch();
-        }
-      }
-      requestAnimationFrame(anim);
-    }
-
-    function bepaalIndex(hoekGraden) {
-      const norm = ((hoekGraden % 360) + 360) % 360;
-      const stap = 360 / opties.length;
-      return Math.floor((opties.length - (norm / stap)) % opties.length);
-    }
-
-    document.getElementById("draaiBtn").addEventListener("click", draai);
-    renderRad();
-
-    // Monster met flood fill
-    const monster = document.getElementById("monster");
-    const mctx = monster.getContext("2d");
-    const img = new Image();
-    img.src = "kleurenmonster-transparant.png"; // in dezelfde map
-    let drawBox = {x:0, y:0, w:monster.width, h:monster.height};
-
-    img.onload = () => { tekenMonster(); kleurMonsterAutomatisch(); };
-
-    function tekenMonster() {
-      mctx.clearRect(0,0,monster.width,monster.height);
-      const s = Math.min(monster.width / img.width, monster.height / img.height);
-      const w = Math.floor(img.width * s);
-      const h = Math.floor(img.height * s);
-      const x = Math.floor((monster.width - w) / 2);
-      const y = Math.floor((monster.height - h) / 2);
-      drawBox = {x, y, w, h};
-      mctx.drawImage(img, x, y, w, h);
-    }
-
-    function hexNaarRGB(hex) {
-      const c = hex.replace("#","").trim();
-      const n = parseInt(c.length === 3 ? c.split("").map(ch=>ch+ch).join("") : c, 16);
-      return {r:(n>>16)&255, g:(n>>8)&255, b:n&255};
-    }
-
-    function floodFillTransparant(x, y, kleurHex, alphaTreshold = 12) {
-      const W = monster.width, H = monster.height;
-      const imgData = mctx.getImageData(0,0,W,H);
-      const data = imgData.data;
-
-      function idx(px, py){ return (py * W + px) * 4; }
-
-      const start = idx(x, y);
-      const sa = data[start+3];
-      const sr = data[start], sg = data[start+1], sb = data[start+2];
-
-      const target = {r: sr, g: sg, b: sb, a: sa};
-      const fill = hexNaarRGB(kleurHex);
-
-      function match(i){
-        const a = data[i+3];
-        if (target.a < alphaTreshold) {
-          return a < alphaTreshold;
-        } else {
-          const dr = data[i] - target.r;
-          const dg = data[i+1] - target.g;
-          const db = data[i+2] - target.b;
-          return (dr*dr + dg*dg + db*db) < 60*60 && Math.abs(a - target.a) < 40;
-        }
-      }
-
-      const stack = [[x,y]];
-      while (stack.length) {
-        let [cx, cy] = stack.pop();
-        let i = idx(cx, cy);
-        while (cx >= 0 && match(i)) { cx--; i -= 4; }
-        cx++; i += 4;
-        let spanUp = false, spanDown = false;
-        while (cx < W && match(i)) {
-          data[i]   = fill.r;
-          data[i+1] = fill.g;
-          data[i+2] = fill.b;
-          data[i+3] = 255;
-
-          if (cy > 0) {
-            const iu = idx(cx, cy - 1);
-            if (match(iu)) { if (!spanUp) { stack.push([cx, cy - 1]); spanUp = true; } }
-            else spanUp = false;
-          }
-          if (cy < H - 1) {
-            const id = idx(cx, cy + 1);
-            if (match(id)) { if (!spanDown) { stack.push([cx, cy + 1]); spanDown = true; } }
-            else spanDown = false;
-          }
-
-          cx++; i += 4;
-        }
-      }
-      mctx.putImageData(imgData, 0, 0);
-    }
-
-    function kleurMonsterAutomatisch() {
-      tekenMonster();
-      const kleur = kleurMap[gekozenKleur] || "#000000";
-      const seedX = Math.floor(drawBox.x + drawBox.w * 0.5);
-      const seedY = Math.floor(drawBox.y + drawBox.h * 0.60);
-      floodFillTransparant(seedX, seedY, kleur, 12);
-    }
-
-    monster.addEventListener("click", (e)=>{
-      const rect = monster.getBoundingClientRect();
-      const x = Math.floor((e.clientX - rect.left) * monster.width / rect.width);
-      const y = Math.floor((e.clientY - rect.top) * monster.height / rect.height);
-      const kleur = kleurMap[gekozenKleur] || "#000000";
-      floodFillTransparant(x, y, kleur, 12);
-    });
-  </script>
-</body>
-</html>
