--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="kolom">
     <h1>Spinner</h1>
     <canvas id="rad" width="400" height="400" aria-label="kleurenspin"></canvas>
-    <button id="draaiBtn">Draai</button>
+    <button id="draaiBtn" type="button">Draai</button>
     <div id="resultaat"></div>
   </div>
 
@@ -40,56 +40,59 @@
   </div>
 
   <script>
-    // Keuzes, zwart staat één keer
+    // 1) Kleurdefinities en labels (Zwart staat één keer)
     const opties = [
       "Wit","Grijs","Zwart","Lichtblauw","Donkerblauw","Roze","Paars",
       "Rood","Lichtgroen","Donkergroen","Geel","Oranje"
     ];
-
     const kleurMap = {
-      "Wit":"#ffffff",
-      "Grijs":"#bdbdbd",
-      "Zwart":"#000000",
-      "Lichtblauw":"#87cefa",
-      "Donkerblauw":"#1e3a8a",
-      "Roze":"#ff9acb",
-      "Paars":"#8b5cf6",
-      "Rood":"#ef4444",
-      "Lichtgroen":"#86efac",
-      "Donkergroen":"#166534",
-      "Geel":"#fde047",
-      "Oranje":"#fb923c"
+      "Wit":"#ffffff", "Grijs":"#bdbdbd", "Zwart":"#000000",
+      "Lichtblauw":"#87cefa", "Donkerblauw":"#1e3a8a", "Roze":"#ff9acb",
+      "Paars":"#8b5cf6", "Rood":"#ef4444", "Lichtgroen":"#86efac",
+      "Donkergroen":"#166534", "Geel":"#fde047", "Oranje":"#fb923c"
     };
 
-    // Spinner
+    // 2) Spinner
     const rad = document.getElementById("rad");
     const rctx = rad.getContext("2d");
     const R = rad.width / 2;
-    let hoek = 0, bezig = false, gekozenKleur = "Wit";
+    let hoek = 0;            // huidige rotatie in graden
+    let bezig = false;       // voorkomt dubbel draaien
+    let gekozenKleur = "Wit";
+
+    function isDonker(hex) {
+      // relatieve luminantie, drempel ~ 0.5
+      const c = hex.replace("#",""); 
+      const r = parseInt(c.substring(0,2),16) / 255;
+      const g = parseInt(c.substring(2,4),16) / 255;
+      const b = parseInt(c.substring(4,6),16) / 255;
+      const lin = v => (v <= 0.03928) ? v/12.92 : Math.pow((v+0.055)/1.055, 2.4);
+      const L = 0.2126*lin(r) + 0.7152*lin(g) + 0.0722*lin(b);
+      return L < 0.5;
+    }
 
     function tekenSchijven() {
       const stap = 2 * Math.PI / opties.length;
       for (let i = 0; i < opties.length; i++) {
         const naam = opties[i];
+        const fill = kleurMap[naam] || "#000000";
+
+        // sector
         rctx.beginPath();
         rctx.moveTo(R, R);
         rctx.arc(R, R, R - 4, i * stap, (i + 1) * stap);
-        rctx.fillStyle = kleurMap[naam] || "#000";
+        rctx.closePath();
+        rctx.fillStyle = fill;
         rctx.fill();
         rctx.strokeStyle = "#222";
         rctx.stroke();
 
-        // tekstkleur voor donkere vlakken
-        let tekstkleur = "#000";
-        if (naam === "Zwart" || naam === "Donkerblauw" || naam === "Donkergroen") {
-          tekstkleur = "#fff";
-        }
-
+        // tekst
         rctx.save();
         rctx.translate(R, R);
         rctx.rotate(i * stap + stap / 2);
         rctx.textAlign = "right";
-        rctx.fillStyle = tekstkleur;
+        rctx.fillStyle = isDonker(fill) ? "#ffffff" : "#000000";
         rctx.font = "16px system-ui, Arial";
         rctx.fillText(naam, R - 12, 6);
         rctx.restore();
@@ -97,16 +100,16 @@
     }
 
     function tekenPijl() {
-      // pijl rechts van het rad, horizontaal gespiegeld, wijst naar links
-      const tipX = rad.width - 8;      // punt van de pijl, bijna tegen de rand
-      const tipY = R;                  // midden in de hoogte
-      const baseX = rad.width - 42;    // basis dichter bij het rad
-      const halfH = 18;                // halve hoogte van de basis
+      // vaste pijl rechts op 3 uur, wijst naar links
+      const tipX = rad.width - 8;
+      const tipY = R;
+      const baseX = rad.width - 42;
+      const halfH = 18;
 
       rctx.beginPath();
-      rctx.moveTo(tipX, tipY);                 // punt
-      rctx.lineTo(baseX, tipY - halfH);        // bovenbasis
-      rctx.lineTo(baseX, tipY + halfH);        // onderbasis
+      rctx.moveTo(tipX, tipY);              // punt
+      rctx.lineTo(baseX, tipY - halfH);     // bovenbasis
+      rctx.lineTo(baseX, tipY + halfH);     // onderbasis
       rctx.closePath();
       rctx.fillStyle = "#222";
       rctx.fill();
@@ -114,14 +117,149 @@
 
     function renderRad() {
       rctx.clearRect(0, 0, rad.width, rad.height);
+      // schijven draaien
       rctx.save();
       rctx.translate(R, R);
       rctx.rotate(hoek * Math.PI / 180);
       rctx.translate(-R, -R);
       tekenSchijven();
       rctx.restore();
-      tekenPijl();   // pijl tekent na het roteren, blijft vast op drie uur
+      // pijl blijft vast staan
+      tekenPijl();
+    }
+
+    function bepaalIndex(hoekGraden) {
+      // pijl staat op 0 graden (rechts). We zoeken welk segment de hoek 0 kruist.
+      const norm = ((hoekGraden % 360) + 360) % 360;   // 0..359
+      const stap = 360 / opties.length;
+      // kleine positieve draai → segment N-1 onder de pijl, dit klopt met onderstaande formule
+      return Math.floor((opties.length - (norm / stap)) % opties.length);
     }
 
     function draai() {
       if (bezig) return;
+      bezig = true;
+      const doel = Math.random() * 360 + 1080; // min drie rondes
+      const duur = 3000;
+      let start = null;
+
+      function anim(t) {
+        if (!start) start = t;
+        const p = Math.min((t - start) / duur, 1);
+        const ease = 1 - Math.pow(1 - p, 3);
+        hoek = doel * ease;
+
+        renderRad();
+
+        if (p < 1) requestAnimationFrame(anim);
+        else {
+          bezig = false;
+          const idx = bepaalIndex(hoek);
+          gekozenKleur = opties[idx];
+          document.getElementById("resultaat").textContent =
+            "Het monster wordt: " + gekozenKleur + ".";
+          kleurMonsterAutomatisch();
+        }
+      }
+      requestAnimationFrame(anim);
+    }
+
+    // 3) Draaiknop veilig binden, ook als id per ongeluk afwijkt
+    const knop = document.getElementById("draaiBtn") || document.getElementById("btnDraai") || document.querySelector("button");
+    if (knop) knop.addEventListener("click", draai);
+
+    // eerste render
+    renderRad();
+
+    // 4) Monster flood fill
+    const monster = document.getElementById("monster");
+    const mctx = monster.getContext("2d");
+    const img = new Image();
+    img.src = "kleurenmonster-transparant.png";   // zelfde map
+    let drawBox = {x:0, y:0, w:monster.width, h:monster.height};
+
+    img.onload = () => { tekenMonster(); kleurMonsterAutomatisch(); };
+
+    function tekenMonster() {
+      mctx.clearRect(0,0,monster.width,monster.height);
+      const s = Math.min(monster.width / img.width, monster.height / img.height);
+      const w = Math.floor(img.width * s);
+      const h = Math.floor(img.height * s);
+      const x = Math.floor((monster.width - w) / 2);
+      const y = Math.floor((monster.height - h) / 2);
+      drawBox = {x, y, w, h};
+      mctx.drawImage(img, x, y, w, h);
+    }
+
+    function hexNaarRGB(hex) {
+      const c = hex.replace("#","").trim();
+      const n = parseInt(c.length === 3 ? c.split("").map(ch=>ch+ch).join("") : c, 16);
+      return {r:(n>>16)&255, g:(n>>8)&255, b:n&255};
+    }
+
+    function floodFillTransparant(x, y, kleurHex, alphaTreshold = 12) {
+      const W = monster.width, H = monster.height;
+      const imgData = mctx.getImageData(0,0,W,H);
+      const data = imgData.data;
+      const idx = (px, py) => (py * W + px) * 4;
+
+      const start = idx(x, y);
+      const target = { r: data[start], g: data[start+1], b: data[start+2], a: data[start+3] };
+      const fill = hexNaarRGB(kleurHex);
+
+      const match = i => {
+        const a = data[i+3];
+        if (target.a < alphaTreshold) return a < alphaTreshold; // start op transparant
+        const dr = data[i] - target.r, dg = data[i+1] - target.g, db = data[i+2] - target.b;
+        return (dr*dr + dg*dg + db*db) < 3600 && Math.abs(a - target.a) < 40;
+      };
+
+      const stack = [[x,y]];
+      while (stack.length) {
+        let [cx, cy] = stack.pop();
+        let i = idx(cx, cy);
+        while (cx >= 0 && match(i)) { cx--; i -= 4; }
+        cx++; i += 4;
+        let spanUp = false, spanDown = false;
+
+        while (cx < W && match(i)) {
+          data[i]   = fill.r;
+          data[i+1] = fill.g;
+          data[i+2] = fill.b;
+          data[i+3] = 255;
+
+          if (cy > 0) {
+            const iu = idx(cx, cy - 1);
+            if (match(iu)) { if (!spanUp) { stack.push([cx, cy - 1]); spanUp = true; } }
+            else spanUp = false;
+          }
+          if (cy < H - 1) {
+            const id = idx(cx, cy + 1);
+            if (match(id)) { if (!spanDown) { stack.push([cx, cy + 1]); spanDown = true; } }
+            else spanDown = false;
+          }
+
+          cx++; i += 4;
+        }
+      }
+      mctx.putImageData(imgData, 0, 0);
+    }
+
+    function kleurMonsterAutomatisch() {
+      tekenMonster();
+      const kleur = kleurMap[gekozenKleur] || "#000000";
+      const seedX = Math.floor(drawBox.x + drawBox.w * 0.5);
+      const seedY = Math.floor(drawBox.y + drawBox.h * 0.60);
+      floodFillTransparant(seedX, seedY, kleur, 12);
+    }
+
+    monster.addEventListener("click", e => {
+      const rect = monster.getBoundingClientRect();
+      const x = Math.floor((e.clientX - rect.left) * monster.width / rect.width);
+      const y = Math.floor((e.clientY - rect.top) * monster.height / rect.height);
+      const kleur = kleurMap[gekozenKleur] || "#000000";
+      floodFillTransparant(x, y, kleur, 12);
+    });
+  </script>
+</body>
+</html>
